--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
-<!doctype Html>
+<!Doctype Html>  
+<Html>     
+<Head>      
+<Title>     
+Make a Navigation Bar  
+</Title>  
+<style type=text/css>   
+body   
+{  
+height: 125vh;  
+margin-top: 80px;  
+padding: 30px;  
+background-size: cover;  
+font-family: sans-serif;  
+}  
+header {  
+background-color: orange;  
+position: fixed;  
+left: 0;  
+right: 0;  
+top: 5px;  
+height: 30px;  
+display: flex;  
+align-items: center;  
+box-shadow: 0 0 25px 0 black;  
+}  
+header * {  
+display: inline;  
+}  
+header li {  
+margin: 20px;  
+}  
+header li a {  
+color: blue;  
+text-decoration: none;  
+}  
+</style>   
+</Head>  
 <Body>   
-<nav>  
-     
-     
-</nav>  
-Adventures on the Web
-</Body>   
-</Html>  
-<Body>   
+<header>  
 <nav>  
 <ul>  
 <li>  
@@ -26,6 +56,7 @@ Adventures on the Web
 </li>  
 </ul>  
 </nav>  
+</header>  
 You are at JavaTpoint Site.....  
 </Body>   
 </Html>  
