--- a/index.html
+++ b/index.html
@@ -47,16 +47,18 @@ text-decoration: none;
 <a href="#"> About </a>  
 </li>  
 <li>  
-<a href="#"> Contact </a>  
+<a href="#"> Our Adventures </a>  
 </li>  
-<li> <a href="#"> Terms of use </a>  
+<li> <a href="#"> Project AI (Roblox) </a>  
 </li>  
 <li>  
-<a href="#"> Join Us </a>  
+<a href="#"> Project WinMax </a>  
 </li>  
 </ul>  
 </nav>  
 </header>  
-You are at JavaTpoint Site.....  
+Welcome to Adventures on the Web! the home of Quantum Adventures on YouTube and our Programming Projects
+  
+You can view our adventures and projects here.
 </Body>   
 </Html>  
