--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@ text-decoration: none;
 <nav>  
 <ul>  
 <li>  
-<a href="#"> Home </a>  
+<a href="index.html"> Home </a>  
 </li>  
 <li>  
-<a href="#"> About </a>  
+<a href="about.html"> About </a>  
 </li>  
 <li>  
-<a href="#"> Our Adventures </a>  
+<a href="adventure.html"> Our Adventures </a>  
 </li>  
-<li> <a href="#"> Project AI (Roblox) </a>  
+<li> <a href="err404.html"> Project AI (Roblox) </a>  
 </li>  
 <li>  
-<a href="#"> Project WinMax </a>  
+<a href="funrollercoaster606.github.io/funs-projects/index.html"> Project WinMax </a>  
 </li>  
 </ul>  
 </nav>  
