--- a/err404.html
+++ b/err404.html
@@ -52,14 +52,12 @@ text-decoration: none;
 <li> <a href="err404.html"> Project AI (Roblox) </a>  
 </li>  
 <li>  
-<a href="funrollercoaster606.github.io/funs-projects/index.html"> Project WinMax </a>  
+<a href="err404.html"> Project X </a>  
 </li>  
 </ul>  
 </nav>  
 </header> 
-<header> 
-Whoops!
-</header>
+Uh oh!
 <Body>
 We aren't sure what you're looking for. (Error 404)
 </Body>
