--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ text-decoration: none;
 <li> <a href="err404.html"> Project AI (Roblox) </a>  
 </li>  
 <li>  
-<a href="funrollercoaster606.github.io/funs-projects/index.html"> Project WinMax </a>  
+<a href="err404.html"> Project X </a>  
 </li>  
 </ul>  
 </nav>  
